--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -18,16 +18,6 @@
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
-       <widget class="QTreeView" name="treeView">
-        <property name="maximumSize">
-         <size>
-          <width>200</width>
-          <height>16777215</height>
-         </size>
-        </property>
-       </widget>
-      </item>
-      <item>
        <widget class="QTableView" name="tableView"/>
       </item>
      </layout>
@@ -53,8 +43,36 @@
    </attribute>
    <addaction name="actionLoad"/>
    <addaction name="actionRun"/>
+   <addaction name="actionQuery"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
+  <widget class="QDockWidget" name="dockWidget">
+   <attribute name="dockWidgetArea">
+    <number>1</number>
+   </attribute>
+   <widget class="QWidget" name="dockWidgetContents">
+    <layout class="QVBoxLayout" name="verticalLayout_2">
+     <property name="spacing">
+      <number>0</number>
+     </property>
+     <property name="leftMargin">
+      <number>0</number>
+     </property>
+     <property name="topMargin">
+      <number>0</number>
+     </property>
+     <property name="rightMargin">
+      <number>0</number>
+     </property>
+     <property name="bottomMargin">
+      <number>0</number>
+     </property>
+     <item>
+      <widget class="QTreeView" name="treeView"/>
+     </item>
+    </layout>
+   </widget>
+  </widget>
   <action name="actionLoad">
    <property name="text">
     <string>load</string>
@@ -63,6 +81,11 @@
   <action name="actionRun">
    <property name="text">
     <string>run</string>
+   </property>
+  </action>
+  <action name="actionQuery">
+   <property name="text">
+    <string>query</string>
    </property>
   </action>
  </widget>
